--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,466 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 10%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1,h2,h3,h4,h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 
+     .container {
+    /* margin: 0 auto;       */
+    /* display: flex; */
+} 
+/* start media queries */
+/* mobile phone */
+    @media(max-width: 500px) {
+    .container {
+    width: 500px;    
+    background: gray;}
+}
+/* Tablet */
+    @media(min-width: 501px) and (max-width: 800px) {
+    
+    .container {
+       
+     /* background-color: aqua; */
+     /* width: 100%; */
+    }
+    .top-container {
+        max-width: 100%;
+    }
+
+    .top-images .circle {
+        display: none; 
+     
+    }
+    .nav {
+         /* display: flex;  */
+         
+        
+    }
+    .nav a{
+        width: 100%;
+        font-size: 15px;
+        
+        
+        } 
+    .great .logo {
+        display: flex
+    } 
+
+    .Iod {
+        justify-content: center;
+    }
+  
+    .content .Features {
+        font-size: 30px;
+    }
+    .content .About {
+        font-size: 30px; 
+    }
+    .img-container .middle-img {
+        width: 90%;
+        /* margin: 15% 5% 5% 5%; */
+        /* margin-top: 80px;
+        margin-left: 30px;
+        margin-right: 30px; */
+        padding: 2%;
+    }
+   .bottom-content .Services {
+         height: 40%;
+         font-size: 20px;
+    }
+    .bottom-content .Product {
+        height: 40%;
+        font-size: 20px;
+   }
+   .bottom-content .Vision {
+        height: 40%;
+        font-size: 20px;
+}
+
+/* end of media query */
+
+} 
+/* @media(min-width: 801px) and (max-width: 1024px) {
+    background: teal;
+} */
+
+.top-container {
+    /* display: flex; */
+    /* justify-content: space-between; */
+    margin: 5%;
+    
+
+
+}
+
+.top-images {
+    display: flex; 
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.Iod {
+    display: flex; 
+    padding: 10%;
+    text-align: center;
+    font-size: 100px;
+
+}
+
+.Iod .button {
+    /* margin-top: 0; */
+    border: 1 px solid gray;
+    margin-left: 2%;
+    border-radius: 6px;
+    width: 45%;
+    height: 15%;
+    font-size: 20px;
+}
+
+.circle {
+    margin: auto;
+}
+.nav {
+    display: flex;
+}
+.nav a {
+    /* padding: 47px;
+    margin-top: 10%; */
+    text-decoration: none;
+    color: gray;
+    font-size: 20px;
+}
+
+
+.great .logo {
+    
+     margin: auto;
+}
+
+/*features that wrap around middle picture*/
+.content {
+    margin: 7%;
+    display: flex;
+    height: 200px;
+    margin-bottom: 7%;
+    border-top: 2px solid gray;
+
+}
+
+.About {
+
+    width: 48%;
+    /* margin: 1% 8%;  */
+    
+    margin-top: 5%;
+    font-size: 35px;
+    height: 250px;
+}
+
+.Features {
+    width: 49%;
+    /* margin: 1% 2%; */
+    /* margin-left: 10%; */
+    margin-top: 5%;
+
+    font-size: 35px;
+    height: 250px;
+}
+
+.bottom-content {
+
+    /* margin-left: 40px; */
+    /* margin-right: 35px; */
+    margin: auto;
+    border-bottom: 2px solid gray;
+    height: 300px;
+    width: 90%;
+
+}
+
+.spv {
+    display: flex;
+}
+
+.Services {
+
+    width: 30%;
+    margin: 10px 20px;
+    font-size: 25px;
+
+}
+
+.Product {
+
+    width: 31%;
+    margin: 10px 20px;
+    font-size: 25px;
+}
+
+.Vision {
+    margin-left: 600px;
+    width: 32%;
+    margin: 10px 20px;
+    font-size: 25px;
+
+}
+
+.img-container {
+    display: flex;
+}
+
+/*across page computer screen image*/
+.middle-img {
+    width: 100%;
+    margin: 15% 5% 5% 5%;
+    /* margin-top: 80px;
+    margin-left: 30px;
+    margin-right: 30px; */
+    padding: 2%;
+    
+
+
+}
+
+/*this is where bottom 
+section of page starts*/
+
+
+.footer {
+    margin: 30px;
+}
+
+address {
+    text-align: justify;
+    padding: 4%;
+    font-size: 30px;
+}
+
+.copyright {
+    text-align: center;
+    padding: 25px;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.contact {
+    margin: auto;
+    padding: 4%;
+    font-size: 25px
+}
+
+/*Services page. start of second page*/
+
+.container1 {
+
+    padding: 30px;
+
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px;
+
+}
+
+header .navtext a {
+
+    padding: 35px;
+    margin-top: 30px;
+    margin-left: 30px;
+    text-decoration: none;
+    color: gray;
+    font-size: 25px;
+}
+
+.services-header-img {
+    width: 92%;
+    margin: 20px;
+    margin-left: 70px;
+    margin-right: 70px;
+    height: 300px;
+
+}
+
+.serv {
+    display: flex;
+    width: 96%;
+
+
+}
+
+.servtext {
+
+    height: 200px;
+    font-size: 30px;
+    margin-left: 70px;
+
+}
+
+.content2 {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 50px;
+    /*border-bottom: 5px solid gray;*/
+    height: 1125px;
+
+}
+
+.group1 {
+    border: 2px solid gray;
+    height: 300px;
+    width: 45%;
+    font-size: 25px;
+    padding: 15px;
+    margin-bottom: 25px;
+    background-color: #E0E0E0;
+
+}
+
+.group2 {
+    border: 2px solid gray;
+    padding: 15px;
+    height: 300px;
+    width: 45%;
+    font-size: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    background-color: #E0E0E0;
+}
+
+.group3 {
+    border: 2px solid gray;
+    padding: 15px;
+    height: 300px;
+    width: 45%;
+    font-size: 25px;
+    margin-top: 25px;
+    margin-bottom: 50px;
+    background-color: #E0E0E0;
+}
+
+.btn {
+    width: 200px;
+    height: 50px;
+    margin: 15px;
+    padding: 15px;
+    border-radius: 7px;
+}
+
+.textpicbottom {
+    display: flex;
+    border-top: 2px solid black;
+    width: 90%;
+    margin-left: 75px;
+    justify-content: space-between;
+
+}
+
+.aboutfact {
+    border: 1 px solid gray;
+    /*margin-left: 70px;*/
+    padding: 20px;
+    width: 45%;
+    font-size: 25px;
+    margin-top: 20px;
+}
+
+.services-info-img {
+
+    width: 47%;
+    height: 420px;
+    margin-top: 50px;
+
+}
+
+/*.factpicwrap {
+    display: flex;
+}
+
+/*.factpic {
+    padding: 50px;
+    margin-right: 60px;
+    width: 45%;
+    height:                                 
+
+
+    /*justify-content: flex-end;
+} */
+.cc {
+    text-align: center;
+}
+
+li {
+    margin-top: 20px;
+}
+
+hr {
+    width: 87%;
+    margin-left: 90px;
+}
