--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ table {
 html,
 body {
     height: 100%;
-    margin: 10%;
+    margin: 5%;
     font-family: 'Titillium Web', sans-serif;
 }
 
@@ -68,103 +68,48 @@ h1,h2,h3,h4,h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 
-     .container {
-    /* margin: 0 auto;       */
-    /* display: flex; */
-} 
-/* start media queries */
-/* mobile phone */
-    @media(max-width: 500px) {
-    .container {
-    width: 500px;    
-    background: gray;}
-}
-/* Tablet */
-    @media(min-width: 501px) and (max-width: 800px) {
-    
-    .container {
-       
-     /* background-color: aqua; */
-     /* width: 100%; */
-    }
-    .top-container {
-        max-width: 100%;
-    }
+.container {
+    margin: 1%;
+    margin-bottom: 15%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+    border: 1px solid grey;  
+    width: 100%; 
 
-    .top-images .circle {
-        display: none; 
-     
-    }
-    .nav {
-         /* display: flex;  */
-         
-        
-    }
-    .nav a{
-        width: 100%;
-        font-size: 15px;
-        
-        
-        } 
-    .great .logo {
-        display: flex
-    } 
-
-    .Iod {
-        justify-content: center;
-    }
+ }   
+.great {
+    display: flex; 
+    border: 1px solid grey; 
+    margin: 2%;
   
-    .content .Features {
-        font-size: 30px;
-    }
-    .content .About {
-        font-size: 30px; 
-    }
-    .img-container .middle-img {
-        width: 90%;
-        /* margin: 15% 5% 5% 5%; */
-        /* margin-top: 80px;
-        margin-left: 30px;
-        margin-right: 30px; */
-        padding: 2%;
-    }
-   .bottom-content .Services {
-         height: 40%;
-         font-size: 20px;
-    }
-    .bottom-content .Product {
-        height: 40%;
-        font-size: 20px;
-   }
-   .bottom-content .Vision {
-        height: 40%;
-        font-size: 20px;
 }
-
-/* end of media query */
-
-} 
-/* @media(min-width: 801px) and (max-width: 1024px) {
-    background: teal;
-} */
-
-.top-container {
-    /* display: flex; */
-    /* justify-content: space-between; */
-    margin: 5%;
-    
-
-
+.nav {
+    display: flex;
 }
-
+ .nav a {
+    justify-content: space-between;
+    margin: 9%;   
+    text-decoration: none;
+    color: gray;
+    font-size: 20px;
+    border: 1px solid grey;   
+}
+/* logo for header */
+.great .logo {
+    display: flex;
+    left: 83%;
+    top: 0;
+    margin: 20px;
+}
 .top-images {
-    display: flex; 
+    display: flex;
     justify-content: space-evenly;
-    width: 100%;
+  
 }
-
+/* innovation on demand logo */
 .Iod {
-    display: flex; 
+    display: flex;
     padding: 10%;
     text-align: center;
     font-size: 100px;
@@ -172,101 +117,72 @@ h1,h2,h3,h4,h5 {
 }
 
 .Iod .button {
-    /* margin-top: 0; */
+    margin-top: 0;
     border: 1 px solid gray;
-    margin-left: 2%;
-    border-radius: 6px;
-    width: 45%;
-    height: 15%;
+    margin-left: 5px;
+    border-radius: 2px;
+    width: 170px;
+    height: 70px;
     font-size: 20px;
 }
-
-.circle {
-    margin: auto;
-}
-.nav {
-    display: flex;
-}
-.nav a {
-    /* padding: 47px;
-    margin-top: 10%; */
-    text-decoration: none;
-    color: gray;
-    font-size: 20px;
-}
-
 
 .great .logo {
+    display: flex;
     
-     margin: auto;
 }
 
 /*features that wrap around middle picture*/
 .content {
-    margin: 7%;
+    margin: 1%;
+    border-top: 1px solid gray;
     display: flex;
-    height: 200px;
-    margin-bottom: 7%;
-    border-top: 2px solid gray;
-
+    height: 60%;
+    width: 100%;   
 }
 
 .About {
 
     width: 48%;
-    /* margin: 1% 8%;  */
-    
-    margin-top: 5%;
-    font-size: 35px;
-    height: 250px;
+    margin: 2.5%; 
+    font-size: 40px;
+    height: 80%;
 }
 
 .Features {
     width: 49%;
-    /* margin: 1% 2%; */
-    /* margin-left: 10%; */
-    margin-top: 5%;
-
-    font-size: 35px;
-    height: 250px;
+    margin: 2.5%;
+    font-size: 40px;
+    height: 80%;
 }
-
-.bottom-content {
-
-    /* margin-left: 40px; */
-    /* margin-right: 35px; */
-    margin: auto;
-    border-bottom: 2px solid gray;
-    height: 300px;
-    width: 90%;
-
-}
+/* bottom text with 3 columns */
 
 .spv {
-    display: flex;
+    display: flex; 
+    width: 100%;   
+    border-bottom: 2px solid gray;
 }
 
 .Services {
-
+    
     width: 30%;
-    margin: 10px 20px;
+    margin: 1%;
     font-size: 25px;
 
 }
 
 .Product {
-
+    
     width: 31%;
-    margin: 10px 20px;
+    margin: 1%;
     font-size: 25px;
 }
 
 .Vision {
-    margin-left: 600px;
+  
     width: 32%;
-    margin: 10px 20px;
+    margin: 1%;
     font-size: 25px;
-
+  
 }
 
 .img-container {
@@ -276,14 +192,7 @@ h1,h2,h3,h4,h5 {
 /*across page computer screen image*/
 .middle-img {
     width: 100%;
-    margin: 15% 5% 5% 5%;
-    /* margin-top: 80px;
-    margin-left: 30px;
-    margin-right: 30px; */
-    padding: 2%;
-    
-
-
+    margin: 1%;   
 }
 
 /*this is where bottom 
@@ -291,12 +200,13 @@ section of page starts*/
 
 
 .footer {
-    margin: 30px;
+    margin: 1%;
+    
 }
 
 address {
     text-align: justify;
-    padding: 4%;
+    padding: 25px;
     font-size: 30px;
 }
 
@@ -308,8 +218,7 @@ address {
 }
 
 .contact {
-    margin: auto;
-    padding: 4%;
+    margin: 2%;
     font-size: 25px
 }
 
@@ -369,7 +278,7 @@ header .navtext a {
     padding: 50px;
     /*border-bottom: 5px solid gray;*/
     height: 1125px;
-
+    
 }
 
 .group1 {
@@ -430,15 +339,13 @@ header .navtext a {
     font-size: 25px;
     margin-top: 20px;
 }
-
 .services-info-img {
-
+    
     width: 47%;
     height: 420px;
     margin-top: 50px;
 
 }
-
 /*.factpicwrap {
     display: flex;
 }
@@ -459,7 +366,6 @@ header .navtext a {
 li {
     margin-top: 20px;
 }
-
 hr {
     width: 87%;
     margin-left: 90px;
