--- a/css/index.css
+++ b/css/index.css
@@ -74,13 +74,11 @@ h1,h2,h3,h4,h5 {
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
-    border: 1px solid grey;  
     width: 100%; 
 
  }   
 .great {
     display: flex; 
-    border: 1px solid grey; 
     margin: 2%;
   
 }
@@ -92,8 +90,7 @@ h1,h2,h3,h4,h5 {
     margin: 9%;   
     text-decoration: none;
     color: gray;
-    font-size: 20px;
-    border: 1px solid grey;   
+    font-size: 20px;  
 }
 /* logo for header */
 .great .logo {
@@ -110,20 +107,19 @@ h1,h2,h3,h4,h5 {
 /* innovation on demand logo */
 .Iod {
     display: flex;
-    padding: 10%;
+    /* padding: 10%; */
     text-align: center;
     font-size: 100px;
 
 }
 
 .Iod .button {
-    margin-top: 0;
-    border: 1 px solid gray;
-    margin-left: 5px;
+    border: 1px solid;
+    margin-left: 1%;
     border-radius: 2px;
-    width: 170px;
-    height: 70px;
-    font-size: 20px;
+    width: 42%;
+    height: 10%;
+    font-size: 22px;
 }
 
 .great .logo {
@@ -143,14 +139,14 @@ h1,h2,h3,h4,h5 {
 .About {
 
     width: 48%;
-    margin: 2.5%; 
+    /* margin: 2.5%;  */
     font-size: 40px;
     height: 80%;
 }
 
 .Features {
     width: 49%;
-    margin: 2.5%;
+    /* margin: 2.5%; */
     font-size: 40px;
     height: 80%;
 }
@@ -159,9 +155,8 @@ h1,h2,h3,h4,h5 {
 .spv {
     display: flex; 
     width: 100%;   
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid gray;   
 }
-
 .Services {
     
     width: 30%;
@@ -369,4 +364,149 @@ li {
 hr {
     width: 87%;
     margin-left: 90px;
+}
+/* MEDIA QUERIES  */
+@media (max-width: 800px) {
+
+    .circle {
+        display: none;
+    }
+    .nav {
+        margin-left: -95%;    
+        font-size: 10px;
+        justify-content: center;
+        margin: 6%;      
+    }
+   .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .content {
+        margin: 1%;
+        border-top: 1px solid gray;
+        display: flex;
+        height: 20%;
+        width: 100%; 
+    }
+    .About {
+        padding: 1%;
+        width: 48%; 
+        font-size: 18px;
+        height: 20%;
+    }
+    
+    .Features {
+        width: 49%;   
+        font-size: 18px;
+        height: 20%;
+        padding: 1%;
+    }
+    .spv {
+        height: 21%;
+    }
+    .Services {
+        font-size: 15px;   
+    }
+    
+    .Product {
+        font-size: 15px;
+    }
+    
+    .Vision {
+        font-size: 15px;     
+    }
+    address {
+
+        font-size: 15px;
+    }
+    
+    .copyright {
+        font-size: 10px;
+    
+
+    }
+    
+    .contact {
+        font-size: 15px
+    }
+    
+}
+@media (max-width: 500px) {
+    body {
+        margin: 0 auto; 
+       
+        height: 100%;
+    }
+    .container {
+        margin: 0 0%;
+        margin-bottom: 0%; 
+          
+    }
+    .nav {
+   
+        flex-direction: column;
+        align-items: center;
+        
+        width: 115%;
+    }
+    .nav a {
+        
+        text-align: center;
+        border: 1px solid gray;
+        width: 100%;
+        padding: 5%;
+    }
+
+    .About {
+        width: 100%;
+        display: inline-block;
+        font-size: 13px;
+        height: 10%;
+    }
+    
+    .Features {
+        display: inline-block;
+        width: 100%;
+        font-size: 13px;
+        height: 10%;
+      
+    }
+    .content {
+        display: inline-block;
+        height: 20%;
+
+    }
+    .spv {
+        display: inline-block;
+        height: 29%;
+    }
+    .Services {
+        font-size: 13px;
+        width: 100%;   
+    }
+    
+    .Product {
+        font-size: 13px;
+        width: 100%;
+    }
+    
+    .Vision {
+        font-size: 13px; 
+        width: 100%;    
+    }
+    address {
+
+        font-size: 13px;
+    }
+    
+    .copyright {
+        font-size: 10px;
+    
+
+    }
+    
+    .contact {
+        font-size: 15px
+    }
+    
 }
