--- a/css/index.css
+++ b/css/index.css
@@ -87,10 +87,11 @@ h1,h2,h3,h4,h5 {
 }
  .nav a {
     justify-content: space-between;
-    margin: 9%;   
+    /* margin: 9%;    */
     text-decoration: none;
     color: gray;
-    font-size: 20px;  
+    font-size: 20px; 
+     
 }
 /* logo for header */
 .great .logo {
@@ -372,15 +373,20 @@ hr {
         display: none;
     }
     .nav {
-        margin-left: -95%;    
-        font-size: 10px;
-        justify-content: center;
-        margin: 6%;      
+        width: 100%;
+        font-size: 15px;
+
+    }
+    .nav a {
+        justify-content: space-between;
+        padding: 4%;
+
     }
    .container {
         flex-direction: column;
+        
         align-items: center;
-    }
+    } 
     .content {
         margin: 1%;
         border-top: 1px solid gray;
@@ -402,10 +408,11 @@ hr {
         padding: 1%;
     }
     .spv {
-        height: 21%;
+        height: 24%;
     }
     .Services {
-        font-size: 15px;   
+        font-size: 15px;
+           
     }
     
     .Product {
@@ -433,12 +440,11 @@ hr {
 }
 @media (max-width: 500px) {
     body {
-        margin: 0 auto; 
-       
+        margin: 0%;        
         height: 100%;
     }
     .container {
-        margin: 0 0%;
+        margin: 0%;
         margin-bottom: 0%; 
           
     }
@@ -454,7 +460,7 @@ hr {
         text-align: center;
         border: 1px solid gray;
         width: 100%;
-        padding: 5%;
+        margin: 2%;
     }
 
     .About {
@@ -508,5 +514,5 @@ hr {
     .contact {
         font-size: 15px
     }
-    
+
 }
