--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,12 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    max-width: 900px;
+    padding: 1%;
+    margin: 2% 6%;
+    
+    
 }
 ol, ul {
 	list-style: none;
@@ -55,9 +60,12 @@ table {
 
 html,
 body {
-    height: 100%;
-    margin: 5%;
+    height: auto;
     font-family: 'Titillium Web', sans-serif;
+    
+}
+html {
+    font-size: 62.5%;
 }
 
 h1,h2,h3,h4,h5 {
@@ -67,25 +75,21 @@ h1,h2,h3,h4,h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
-body {
-    
-    padding: 3%;
-}
-
+/* header around nav */
 .container {
-    margin: 1%;
-    
+    /*    */
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
-    width: 100%; 
+    max-width: 100%; 
 
  }   
-.great {
-    display: flex; 
-    margin: 2%;
-  
+ /* round picture */
+.great {   
+    margin-left: 15%;
+    margin-bottom: 1%;
 }
+/* navigation */
 .nav {
     display: flex;
    
@@ -95,28 +99,28 @@ body {
     padding: 4.3%;
     text-decoration: none;
     color: gray;
-    font-size: 20px; 
+    font-size: 1.7rem; 
      
 }
-/* logo for header */
-.great .logo {
-    display: flex;
-    left: 83%;
-    top: 0;
-    margin: 20px;
-}
+/* div around IOD and circle */
 .top-images {
     display: flex;
-    /* justify-content: space-evenly; */
+    
+    
     
 }
 /* innovation on demand logo */
+.top-images h1 {
+    /*  */
+    margin-top: 9%;
+}
 .Iod {
     display: flex;
-    padding-top: 15%;
+    margin: 5%;
     padding-right: 5%;
     text-align: center;
-    font-size: 80px;
+    
+    font-size: 70px;
    
 
 }
@@ -124,10 +128,11 @@ body {
 .Iod .button {
     border: 1px solid;
     margin-left: 1%;
-    border-radius: 2px;
+    border-radius: 4px;
     width: 42%;
     height: 10%;
     font-size: 22px;
+    background-color: aquamarine;
 }
 
 /*  */
@@ -138,22 +143,22 @@ body {
     border-top: 1px solid gray;
     margin-top: 5%;
     display: flex;
-    height: 50%;
+    height: 25%;
     width: 100%;   
 }
 
 .About {
 
     width: 49%;
-    margin: 2.5%; 
-    font-size: 35px;
+    margin: 2.5% 0 0 0%; 
+    font-size: 1.8rem;
     height: 65%;
 }
 
 .Features {
     width: 49%;
-    margin: 2.5%;
-    font-size: 35px;
+    margin: 2.5% 0;
+    font-size: 1.8rem;
     height: 65%;
 }
 /* bottom text with 3 columns */
@@ -161,41 +166,44 @@ body {
 .spv {
     display: flex; 
     width: 100%;   
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid darkslategray;
     border-top: 4%;   
 } 
 /* bottom 3  */
 .Services {
     
-    width: 30%;
-    margin: 1%;
-    font-size: 25px;
+    width: 32%;
+    margin: 1% 0;
+    font-size: 1.5rem;
 
 }
 
 .Product {
     
-    width: 31%;
+    width: 32%;
     margin: 1%;
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 
 .Vision {
   
     width: 32%;
     margin: 1%;
-    font-size: 25px;
+    font-size: 1.5rem;
   
 }
 
 .img-container {
     display: flex;
+    margin: 1%;
 }
 
 /*across page computer screen image*/
 .middle-img {
-    width: 100%;
-    margin: 1%; 
+    width: 100%
+    
+    
+    
       
 }
 
@@ -204,26 +212,26 @@ section of page starts*/
 
 
 .footer {
-    margin: 1%;
+    margin: 1% 0;
     
 }
 
 address {
     text-align: justify;
-    padding: 25px;
-    font-size: 30px;
+    
+    font-size: 1.8rem;
 }
 
 .copyright {
     text-align: center;
     padding: 25px;
-    font-size: 20px;
+    font-size: 1.4rem;
     margin-bottom: 30px;
 }
 
 .contact {
-    margin: 2%;
-    font-size: 25px
+    
+    font-size: 2rem;
 }
 
 /*---------SERVICES PAGE----------------      start of second page*/
@@ -233,14 +241,7 @@ address {
     width: 100%;  
     margin: 1%;
 }
-.great {
-    
-}
-.great .logo {
-    
-    l
-    
-}  
+
 .top {
     display: flex;
     
@@ -464,8 +465,7 @@ hr {
     .nav {
    
         flex-direction: column;
-        align-items: center;
-        
+        align-items: center;  
         width: 120%;
     }
     .nav a {
