--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
-    width: 100%;
+    /* width: 100%; */
 }
 
 html,
@@ -287,7 +287,7 @@ header .navtext a {
     flex-wrap: wrap;
     padding: 2%;    
     height: 1125px;
-    border: 1px solid gray;
+    border: 2px solid darkslategray;
 }
 
 .group1 {
@@ -363,12 +363,13 @@ header .navtext a {
 li {
     margin-top: 20px;
 }
-hr {
-    width: 87%;
-    margin-left: 90px;
-}
+
+
 /* MEDIA QUERIES  */
 @media (max-width: 800px) {
+    body {
+        max-width:700px;
+    }
 
     .circle {
         display: none;
@@ -378,9 +379,15 @@ hr {
         font-size: 15px;
 
     }
+    .great {
+        width: 25%;
+        justify-content: center;
+        margin-right: 20%;
+    }
     .nav a {
         justify-content: space-between;
-        padding: 3%;
+        padding: 4%;
+        font-size: 1.5rem;
 
     }
    .container {
@@ -396,10 +403,14 @@ hr {
         margin-bottom: 7%;
         justify-content: center;
     }
+    .Iod .button {
+        width: 25%;
+        height: 12%;
+    }
     .content {
-        margin: 4%;
-        border-top: 1px solid gray;
-        display: flex;
+        margin: 4% 0;
+        border-top: 2px solid gray;
+        /* display: flex; */
         height: 20%;
         width: 100%; 
     }
@@ -421,6 +432,7 @@ hr {
     }
     .spv {
         height: 24%;
+        padding: 2%;
     }
     .Services {
         font-size: 15px;
@@ -453,14 +465,16 @@ hr {
 /* MOBILE */
 @media (max-width: 500px) {
     body {
-        margin: 0%;        
         height: 100%;
-        max-width: 100%;
+        max-width: 500px;
     }
     .container {
-        margin: 0%;
-        margin-bottom: 0%; 
-        max-width: 100%;  
+
+       
+    }
+    .great {
+        font-size: 1.2rem;
+        justify-content;: center;
     }
     .nav {
    
@@ -472,8 +486,9 @@ hr {
         
         text-align: center;
         border: 1px solid gray;
+        font-size: 1.8rem;
         width: 100%;
-        /* margin: 2%; */
+   
     }
     .middle-img {
         max-width: 100%;
@@ -481,14 +496,14 @@ hr {
     .About {
         width: 100%;
         display: inline-block;
-        font-size: 13px;
+        font-size: 1.6rem;
         height: 10%;
     }
     
     .Features {
         display: inline-block;
         width: 100%;
-        font-size: 13px;
+        font-size: 1.6rem;
         height: 10%;
       
     }
@@ -504,17 +519,17 @@ hr {
 
     }
     .Services {
-        font-size: 13px;
+        font-size: 1.6rem;
         width: 100%;   
     }
     
     .Product {
-        font-size: 13px;
+        font-size: 1.6rem;
         width: 100%;
     }
     
     .Vision {
-        font-size: 13px; 
+        font-size: 1.6rem; 
         width: 100%;    
     }
     address {
