--- a/css/index.css
+++ b/css/index.css
@@ -80,13 +80,13 @@ h1,h2,h3,h4,h5 {
     /*    */
     display: flex;
     flex-direction: row-reverse;
-    align-items: flex-end;
+    /* align-items: flex-end; */
     max-width: 100%; 
 
  }   
  /* round picture */
 .great {   
-    margin-left: 15%;
+    margin-left: 42%;
     margin-bottom: 1%;
 }
 /* navigation */
@@ -96,10 +96,10 @@ h1,h2,h3,h4,h5 {
 }
  .nav a {
     
-    padding: 7% ;
+    
     text-decoration: none;
     color: gray;
-    font-size: 1.7rem; 
+    font-size: 1.6rem; 
      
 }
 /* div around IOD and circle */
@@ -236,9 +236,9 @@ address {
     
     font-size: 2rem;
 }
-
+/* /////////////////////////////////////////////////////////// */
 /*---------SERVICES PAGE----------------      start of second page*/
-
+/* ////////////////////////////////////////////////////////// */
 .container1 {
    
     width: 100%;  
@@ -247,22 +247,19 @@ address {
 
 .top {
     display: flex;
-    
+    text-align: center;    
     width: 100%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
-header .navtext a {
-   
-    border: 1px solid red;
-    text-align: center;
-    padding: 1%;
+a {
     text-decoration: none;
     color: gray;
-    font-size: 25px;
+    font-size: 1.8em;  
+    padding: 0 .65%;
 }
 /* top image */
 .container .serv-img {
-    width: 90%;  
+   max-width: 100%;  
     margin: 3%;
     padding: 2%; 
 
@@ -290,14 +287,14 @@ header .navtext a {
     flex-wrap: wrap;
     padding: 2%;    
     height: 1125px;
-    border: 2px solid darkslategray;
+    /* border: 2px solid darkslategray; */
 }
 
 .group1 {
     border: 2px solid gray;
     height: 300px;
     width: 45%;
-    font-size: 25px;
+    font-size: 2rem;
     padding: 15px;
     margin-bottom: 25px;
     background-color: #E0E0E0;
@@ -309,7 +306,7 @@ header .navtext a {
     padding: 15px;
     height: 300px;
     width: 45%;
-    font-size: 25px;
+    font-size:  2rem;
     margin-top: 25px;
     margin-bottom: 25px;
     background-color: #E0E0E0;
@@ -320,7 +317,7 @@ header .navtext a {
     padding: 15px;
     height: 300px;
     width: 45%;
-    font-size: 25px;
+    font-size:  2rem;
     margin-top: 25px;
     margin-bottom: 50px;
     background-color: #E0E0E0;
@@ -348,13 +345,13 @@ header .navtext a {
     /*margin-left: 70px;*/
     padding: 20px;
     width: 45%;
-    font-size: 25px;
+    font-size:  2rem;
     margin-top: 20px;
 }
 .services-info-img {
     
-    width: 47%;
-    height: 420px;
+    width: 45%;
+    height: 75%;
     margin-top: 50px;
 
 }
@@ -364,11 +361,12 @@ header .navtext a {
 }
 
 li {
-    margin-top: 20px;
+    margin-top: 4%;
 }
 
 
-/* MEDIA QUERIES  */
+/* MEDIA QUERIES Tablet */
+/* //////////////////////////////// */
 @media (max-width: 800px) {
     body {
         max-width:700px;
@@ -385,7 +383,7 @@ li {
     .great {
         width: 25%;
         justify-content: center;
-        margin-right: 20%;
+        /* margin-right: 20%; */
     }
     .nav a {
         justify-content: space-between;
@@ -464,9 +462,39 @@ li {
     .contact {
         font-size: 15px
     }
-    
-}
-/* MOBILE */
+    /*Services Page Media Query  */
+    /* //////////////////////// */
+    body {
+        height: 100%;
+    }
+   .serv-img {
+       width: 100%;   
+     }
+     .top a {
+         font-size: 1.4rem;
+         padding: 1%;
+     }
+     .servtext {
+         font-size: 2rem;;
+     }
+     .group1 {
+         font-size: 1.7rem;
+     }
+     .group2 {
+        font-size: 1.7rem;
+     }
+     .group3 {
+        font-size: 1.7rem;
+     }
+     /* bottom section of services page */
+     .textpicbottom {
+         margin: 0% 5%;       
+     }
+     .aboutfact {
+        font-size: 1.6rem;
+     }
+/* ///////////////////// */
+/*///// MOBILE///////// */
 @media (max-width: 500px) {
     body {
         height: 100%;
